create bootstrap three page

--- a/src/css/components/training.scss
+++ b/src/css/components/training.scss
@@ -254,7 +254,7 @@
     .training__bg-img,
     .training__bg-cube,
     .training__line-img {
-        display: none !important;
+        display: none ;
     }
 }
 
