rewrite with absolute path imports

--- a/src/css/components/services.scss
+++ b/src/css/components/services.scss
@@ -38,7 +38,7 @@
             .plans-item {
                 gap: 41px;
                 display: flex;
-                align-items: start;
+                align-items: flex-start;
 
                 img {
                     width: 23px;
