--- a/src/pug/includes/header.pug
+++ b/src/pug/includes/header.pug
@@ -19,7 +19,7 @@ section#header
   .container
     .container-menu
       a.logo(href="./")
-        img(src="./assets/img/icons/logo.svg", alt="logo")
+        img(src="/src/assets/img/icons/logo.svg", alt="logo")
       nav.menu
         +links
       button.burger.d-md-none
@@ -28,7 +28,7 @@ section#header
         span
       .mobail-menu.d-md-none
         .container
-          img.mobail-menu__close(src="../../assets/img/icons/close.svg")
+          img.mobail-menu__close(src="/src/assets/img/icons/close.svg")
           .mobail-menu__inner
-            img.mobile-menu__logo(src="./assets/img/icons/logo2.svg", alt="")
+            img.mobile-menu__logo(src="/src/assets/img/icons/logo2.svg", alt="")
             +links 
