--- a/src/pug/pages/price.pug
+++ b/src/pug/pages/price.pug
@@ -1,7 +1,7 @@
-extends ../maket.pug
-include ../mixins/price-card.pug
+extends /src/pug/maket.pug
+include /src/pug/mixins/price-card.pug
 block content
-    include ../api/json.pug
+    include /src/pug/api/json.pug
     section#price
         .container
             .breadcrumbs
@@ -9,8 +9,8 @@ block content
                 p /
                 p.active Тренинги
             .price__items
-                img.training__cube-img(src="../../assets/img/icons/cube_one.svg", alt="")
-                img.training__bg-img(src="../../assets/img/services_img.png", alt="")
+                img.training__cube-img(src="/src/assets/img/icons/cube_one.svg", alt="")
+                img.training__bg-img(src="/src/assets/img/services_img.png", alt="")
                 each item in trainings
                     +priceCard(item)
                 
