--- a/src/pug/pages/services.pug
+++ b/src/pug/pages/services.pug
@@ -12,24 +12,24 @@ block content
                 p /
                 p.active Разрабатываем маркетинг-план: дорожная карта достижения целей
             .services__description
-                img.training__cube-img(src="../../assets/img/icons/cube_one.svg", alt="")
-                img.training__bg-img(src="../../assets/img/services_img.png", alt="")
+                img.training__cube-img(src="/src/assets/img/icons/cube_one.svg", alt="")
+                img.training__bg-img(src="/src/assets/img/services_img.png", alt="")
                 p.description-text.col-lg-10.col-12 Разрабатываем маркетинг-план: дорожная карта достижения целей
                 .description-plans.col-xl-8
                     .plans-item
-                        img(src="../../assets/img/icons/logo2.svg", alt="icon")
+                        img(src="/src/assets/img/icons/logo2.svg", alt="icon")
                         p Делаем прогноз развития рынка
                     .plans-item
-                        img(src="../../assets/img/icons/logo2.svg", alt="icon")
+                        img(src="/src/assets/img/icons/logo2.svg", alt="icon")
                         p Проводим сравнительный анализ стратегий конкурентов
                     .plans-item
-                        img(src="../../assets/img/icons/logo2.svg", alt="icon")
+                        img(src="/src/assets/img/icons/logo2.svg", alt="icon")
                         p Определяем точки роста
                     .plans-item
-                        img(src="../../assets/img/icons/logo2.svg", alt="icon")
+                        img(src="/src/assets/img/icons/logo2.svg", alt="icon")
                         p Ставим объективные цели
                     .plans-item
-                        img(src="../../assets/img/icons/logo2.svg", alt="icon")
+                        img(src="/src/assets/img/icons/logo2.svg", alt="icon")
                         p Разрабатываем план и модель контроля его выполнения
                 .services__second-block   
                     p.programs-text Описание услуги
