--- a/src/css/components/home.scss
+++ b/src/css/components/home.scss
@@ -9,7 +9,7 @@
             position: absolute;
             top: 0;
             left: 0;
-            background-image: url('../../assets/img/icons/two__lines.svg');
+            background-image: url('/src/assets/img/icons/two__lines.svg');
             width: 100%;
             height: 100%;
             background-position: 44% 30px;
@@ -317,7 +317,7 @@
                 position: absolute;
                 top: 0;
                 left: 0;
-                background-image: url('../../assets/img/icons/two__lines.svg');
+                background-image: url('/src/assets/img/icons/two__lines.svg');
                 width: 100%;
                 height: 100%;
                 background-position: 45% 95px;
