--- a/src/pug/includes/consultation.pug
+++ b/src/pug/includes/consultation.pug
@@ -1,7 +1,7 @@
 .services-title__consultation
-    img.services-consultation__img1(src="../../assets/img/icons/cube_one.svg", alt="")
-    img.services-consultation__img2(src="../../assets/img/icons/cube_one.svg", alt="")
-    img.services-consultation__img3(src="../../assets/img/icons/cube_one.svg", alt="")
+    img.services-consultation__img1(src="/src/assets/img/icons/cube_one.svg", alt="")
+    img.services-consultation__img2(src="/src/assets/img/icons/cube_one.svg", alt="")
+    img.services-consultation__img3(src="/src/assets/img/icons/cube_one.svg", alt="")
     .services-consultation__block  
         input.services-consultation__input(type="text" placeholder="Ваше имя")
         input.services-consultation__input(type="text" placeholder="Email")
