--- a/src/pug/maket.pug
+++ b/src/pug/maket.pug
@@ -9,7 +9,6 @@ head
   link(href='https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap', rel='stylesheet')
   link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css", integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3", crossorigin="anonymous")
   body
-    include includes/header
+    include /src/pug/includes/header
     block content
-    include includes/footer
-    script(type="module", src="../js/main.js")
+    include /src/pug/includes/footer
