--- a/src/pug/mixins/price-plan.pug
+++ b/src/pug/mixins/price-plan.pug
@@ -1,4 +1,4 @@
 mixin plan(title)
     .price__item-plan
-        img(src="../../assets/img/icons/logo3.svg", alt="")
+        img(src="/src/assets/img/icons/logo3.svg", alt="")
         p #{title}
